--- a/index.html
+++ b/index.html
@@ -61,20 +61,6 @@
         </div>
     </nav>
 
-    <!-- Mobile Top Bar -->
-    <nav id="mobileTopBar" class="bg-white shadow-sm sticky top-0 z-40 hidden md:hidden">
-        <div class="px-4 py-3">
-            <div class="flex items-center justify-between">
-                <h1 class="text-lg font-bold text-primary-700">RSU Delima</h1>
-                <button onclick="showMobileMenu()" class="p-2 rounded-md text-gray-600 hover:text-primary-600 hover:bg-gray-100">
-                    <svg class="h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"></path>
-                    </svg>
-                </button>
-            </div>
-        </div>
-    </nav>
-
     <!-- Mobile Bottom Navigation -->
     <nav id="mobileBottomNav" class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-200 z-50 md:hidden hidden">
         <div class="flex justify-around items-center py-2">
@@ -104,8 +90,7 @@
                 </div>
                 <span>Appointments</span>
             </button>
-            
-            <button onclick="showView('profile')" class="mobile-nav-item flex flex-col items-center py-1 px-2 text-xs font-medium">
+              <button onclick="showView('profile')" class="mobile-nav-item flex flex-col items-center py-1 px-2 text-xs font-medium">
                 <div class="w-6 h-6 mb-1 flex items-center justify-center">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
@@ -113,15 +98,22 @@
                 </div>
                 <span>Profile</span>
             </button>
+            
+            <button onclick="showMobileMenu()" class="mobile-nav-item flex flex-col items-center py-1 px-2 text-xs font-medium">
+                <div class="w-6 h-6 mb-1 flex items-center justify-center">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                    </svg>
+                </div>
+                <span>Menu</span>
+            </button>
         </div>
-    </nav>
-
-    <!-- Mobile Menu Overlay -->
+    </nav>    <!-- Mobile Menu Overlay -->
     <div id="mobileMenuOverlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden md:hidden">
         <div class="fixed top-0 right-0 h-full w-64 bg-white shadow-lg">
             <div class="p-4 border-b border-gray-200">
                 <div class="flex items-center justify-between">
-                    <h2 class="text-lg font-semibold text-gray-900">Menu</h2>
+                    <h2 class="text-lg font-semibold text-gray-900">RSU Delima</h2>
                     <button onclick="hideMobileMenu()" class="p-1 rounded-md text-gray-600 hover:text-gray-900 hover:bg-gray-100">
                         <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
@@ -143,10 +135,8 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <!-- Main Content Container -->
-    <main class="min-h-screen">
+    </div>    <!-- Main Content Container -->
+    <main class="min-h-screen transition-all duration-300">
         <!-- Login View -->
         <div id="loginView" class="view min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
             <div class="max-w-md w-full space-y-8">
@@ -159,13 +149,13 @@
                         <div>
                             <label for="loginEmail" class="block text-sm font-medium text-gray-700">Email or User ID</label>
                             <input id="loginEmail" name="email" type="email" required 
-                                   class="mt-1 appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-primary-500 focus:border-primary-500 focus:z-10 sm:text-sm" 
+                                   class="mobile-optimized mt-1 appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-primary-500 focus:border-primary-500 focus:z-10 sm:text-sm" 
                                    placeholder="Enter your email">
                         </div>
                         <div>
                             <label for="loginPassword" class="block text-sm font-medium text-gray-700">Password</label>
                             <input id="loginPassword" name="password" type="password" required 
-                                   class="mt-1 appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-primary-500 focus:border-primary-500 focus:z-10 sm:text-sm" 
+                                   class="mobile-optimized mt-1 appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-primary-500 focus:border-primary-500 focus:z-10 sm:text-sm" 
                                    placeholder="Enter your password">
                         </div>
                     </div>
@@ -177,7 +167,7 @@
                     </div>
 
                     <div>
-                        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
+                        <button type="submit" class="mobile-optimized group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
                             Sign in
                         </button>
                     </div>
