--- a/index.html
+++ b/index.html
@@ -96,13 +96,32 @@
     </nav>
 
     <!-- Main Content Container -->
-    <main class="min-h-screen transition-all duration-300">
-        <!-- Login View -->
-        <div id="loginView" class="view min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">            <div class="max-w-md w-full space-y-8">
+    <main class="min-h-screen transition-all duration-300">        <!-- Login View -->
+        <div id="loginView" class="view min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+            <div class="max-w-md w-full space-y-8">
                 <div class="text-center">
                     <h2 class="text-3xl font-extrabold text-gray-900">RSU Delima</h2>
                     <p class="mt-2 text-sm text-gray-600">Masuk ke akun Anda</p>
                 </div>
+                
+                <!-- User Type Toggle -->
+                <div class="bg-white p-4 rounded-lg shadow-sm border">
+                    <label class="block text-sm font-medium text-gray-700 mb-3">Masuk sebagai:</label>                    <div class="flex justify-center space-x-1 bg-gray-100 p-1 rounded-lg">
+                        <button type="button" id="patientToggle" onclick="setUserType('patient')" 
+                                class="user-type-toggle flex-1 py-2 px-4 rounded-md text-sm font-medium transition-all duration-200 active">
+                            👤 Pasien
+                        </button>
+                        <button type="button" id="adminToggle" onclick="setUserType('admin')" 
+                                class="user-type-toggle flex-1 py-2 px-4 rounded-md text-sm font-medium transition-all duration-200">
+                            ⚙️ Admin
+                        </button>
+                        <button type="button" id="doctorToggle" onclick="setUserType('doctor')" 
+                                class="user-type-toggle flex-1 py-2 px-4 rounded-md text-sm font-medium transition-all duration-200">
+                            👨‍⚕️ Dokter
+                        </button>
+                    </div>
+                </div>
+
                 <form class="mt-8 space-y-6" onsubmit="handleLogin(event)">
                     <div class="space-y-4">
                         <div>
