Enhances admin dashboard UI with styled stats cards
Improves visual clarity and interactivity of statistics cards
by adding Tailwind CSS, custom color palette, and card
hover effects. Updates header styling for a more modern
look, making key dashboard metrics more accessible and
visually distinct.

--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Console</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="../style.css" rel="stylesheet">
     <link href="admin_style.css" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: {
+                            50: '#eff6ff',
+                            100: '#dbeafe',
+                            200: '#bfdbfe',
+                            300: '#93c5fd',
+                            400: '#60a5fa',
+                            500: '#3b82f6',
+                            600: '#2563eb',
+                            700: '#1d4ed8',
+                            800: '#1e40af',
+                            900: '#1e3a8a',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 <body class="bg-gray-100">
     <div class="min-h-screen flex flex-col">
@@ -16,10 +39,9 @@
             </div>
         </header>
 
-        <main class="flex-grow container mx-auto p-4">
-            <!-- Statistics Cards -->
+        <main class="flex-grow container mx-auto p-4">            <!-- Statistics Cards -->
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
-                <div class="bg-white p-4 rounded-lg shadow">
+                <div class="bg-white p-4 rounded-lg shadow stats-card patients">
                     <div class="flex items-center">
                         <div class="p-2 bg-blue-100 rounded-lg">
                             <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -33,7 +55,7 @@
                     </div>
                 </div>
                 
-                <div class="bg-white p-4 rounded-lg shadow">
+                <div class="bg-white p-4 rounded-lg shadow stats-card schedules">
                     <div class="flex items-center">
                         <div class="p-2 bg-green-100 rounded-lg">
                             <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -47,7 +69,7 @@
                     </div>
                 </div>
                 
-                <div class="bg-white p-4 rounded-lg shadow">
+                <div class="bg-white p-4 rounded-lg shadow stats-card slots">
                     <div class="flex items-center">
                         <div class="p-2 bg-yellow-100 rounded-lg">
                             <svg class="w-6 h-6 text-yellow-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
