Improves responsive navigation and removes test page
Refines navigation visibility logic for better responsiveness across devices and screen orientations. Enhances mobile navigation accessibility and feedback, and updates styles for user type toggles and login forms. Removes the unused test features page to streamline the codebase.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <h1 class="text-2xl font-bold text-primary-700 mb-2">RSU Delima</h1>
             <p class="text-gray-600">Memuat...</p>
         </div>
-    </div><!-- Desktop Navigation Header -->
-    <nav id="desktopNavbar" class="bg-white shadow-lg sticky top-0 z-40 hidden md:block">
+    </div>    <!-- Desktop Navigation Header -->
+    <nav id="desktopNavbar" class="bg-white shadow-lg sticky top-0 z-40 hidden">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
@@ -57,7 +57,8 @@
                 </div>
             </div>
         </div>
-    </nav>    <!-- Mobile Bottom Navigation -->    <nav id="mobileBottomNav" class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-200 z-50 md:hidden hidden">
+    </nav>    <!-- Mobile Bottom Navigation -->
+    <nav id="mobileBottomNav" class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-200 z-50 hidden">
         <div class="flex justify-evenly items-center h-full px-2">
             <button onclick="showView('home')" class="mobile-nav-item flex flex-col items-center py-2 px-1 text-xs font-medium flex-1 min-w-0">
                 <div class="w-6 h-6 mb-1 flex items-center justify-center">
