--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -101,12 +101,19 @@
                             </button>
                             <button onclick="generatePolyclinicServiceReport()" class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-md text-sm w-full sm:w-auto whitespace-nowrap">
                                 🏥 Rekap Per Poli
-                            </button>
-                            <button onclick="generateScheduleServiceReport()" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md text-sm w-full sm:w-auto whitespace-nowrap">
+                            </button>                            <button onclick="generateScheduleServiceReport()" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md text-sm w-full sm:w-auto whitespace-nowrap">
                                 🗓️ Rekap Per Jadwal
                             </button>
                             <button onclick="exportVisitReport()" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-md text-sm w-full sm:w-auto whitespace-nowrap">
                                 📄 Export Excel
+                            </button>
+                        </div>
+                        <div class="flex flex-col sm:flex-row sm:space-x-3 space-y-3 sm:space-y-0">
+                            <button onclick="generateRandomData()" class="bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded-md text-sm w-full sm:w-auto whitespace-nowrap">
+                                🎲 Generate Mock Data
+                            </button>
+                            <button onclick="resetMockData()" class="bg-gray-600 hover:bg-gray-700 text-white px-4 py-2 rounded-md text-sm w-full sm:w-auto whitespace-nowrap">
+                                🔄 Reset Data
                             </button>
                         </div>
                     </div>
