--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
 
     <!-- Main Content Container -->
     <main class="min-h-screen transition-all duration-300">        <!-- Login View -->
-        <div id="loginView" class="view min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
-            <div class="max-w-md w-full space-y-8">
+        <div id="loginView" class="view min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">            <div class="max-w-md w-full space-y-8">
                 <div class="text-center">
-                    <h2 class="text-3xl font-extrabold text-gray-900">RSU Delima</h2>
+                    <div class="mb-6">
+                        <img src="assets/icons/logo_rsu_delima-no_bg.png" alt="RSU Delima Logo" class="mx-auto px-28 w-auto mb-4">
+                    </div>
+                    <h2 class="text-3xl font-bold text-primary-700">Sistem Janji Temu</h2>
                     <p class="mt-2 text-sm text-gray-600">Masuk ke akun Anda</p>
                 </div>
                 
@@ -149,9 +151,8 @@
                         <button type="submit" class="mobile-optimized group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
                             Masuk
                         </button>
-                    </div>
-
-                    <div class="text-center">
+                    </div>                    
+                    <div id="signupLink" class="text-center">
                         <button type="button" onclick="showView('signup')" class="text-sm text-primary-600 hover:text-primary-500">
                             Belum punya akun? Daftar
                         </button>
