--- a/index.html
+++ b/index.html
@@ -126,12 +126,11 @@
                 </div>
 
                 <form class="mt-8 space-y-6" onsubmit="handleLogin(event)">
-                    <div class="space-y-4">
-                        <div>
-                            <label for="loginEmail" class="block text-sm font-medium text-gray-700">Email atau ID Pengguna</label>
-                            <input id="loginEmail" name="email" type="email" required 
+                    <div class="space-y-4">                        <div>
+                            <label for="loginEmail" class="block text-sm font-medium text-gray-700">Email atau Nama Pengguna</label>
+                            <input id="loginEmail" name="loginIdentifier" type="text" required 
                                    class="mobile-optimized mt-1 appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-primary-500 focus:border-primary-500 focus:z-10 sm:text-sm" 
-                                   placeholder="Masukkan email Anda">
+                                   placeholder="Masukkan email atau nama pengguna">
                         </div>
                         <div>
                             <label for="loginPassword" class="block text-sm font-medium text-gray-700">Kata Sandi</label>
@@ -197,11 +196,11 @@
                                 <option value="male">Laki-laki</option>
                                 <option value="female">Perempuan</option>
                             </select>
-                        </div>
-                        <div>
-                            <label for="signupEmail" class="block text-sm font-medium text-gray-700">Email</label>
-                            <input id="signupEmail" name="email" type="email" required 
-                                   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary-500 focus:border-primary-500 sm:text-sm">
+                        </div>                        <div>
+                            <label for="signupEmail" class="block text-sm font-medium text-gray-700">Email atau Nama Pengguna</label>
+                            <input id="signupEmail" name="email" type="text" required 
+                                   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary-500 focus:border-primary-500 sm:text-sm"
+                                   placeholder="Masukkan email atau nama pengguna">
                         </div>
                         <div>
                             <label for="signupBpjs" class="block text-sm font-medium text-gray-700">Nomor BPJS (Opsional)</label>
